# cybersec-project1

./: .gitignore  README.md  csrf.html  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  update.html
