[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial modified for University of Helsinki's Cybersecurity MOOC Project 1"
dependencies = [
    "flask",
    "Flask-WTF",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"